--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
 
 [dependency-groups]
 dev = [
+    "ipython>=9.0.2",
     "ruff>=0.11.2",
     "types-icalendar>=6.1.2.20250321",
     "types-pytz>=2025.2.0.20250326",
